first styling css

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           </button>
           <button id="btn-save-menu" popovertarget="popover-save">Save</button>
         </div>
+        <hr />
         <div id="timer-study">00:00:00</div>
         <div id="timer-rest">00:00:00</div>
         <div class="button-bottom">
@@ -29,10 +30,10 @@
       </div>
       <div id="popover-save" popover>
         <div class="navbar-popover-save">
+          <h3>Save Menu</h3>
           <button popovertarget="popover-save" popovertargetaction="hide">
             X
           </button>
-          <h3>POPOVER SAVE</h3>
         </div>
         <table class="display-session-data">
           <thead>
@@ -50,10 +51,10 @@
       </div>
       <div id="popover-history" popover>
         <div class="navbar-popover-history">
+          <h3>History</h3>
           <button popovertarget="popover-history" popovertargetaction="hide">
             X
           </button>
-          <h3>POPOVER HISTORY</h3>
         </div>
         <table class="table-history">
           <thead>
